[package]
name = "documents"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
keywords = [
    "document",
    "file",
    "filesystem",
    "open",
    "ergonomics",
]
categories = ["filesystem"]
description = "An ergonomic, intuitive and beginner-friendly library for dealing with files and folders."
repository = "https://github.com/kdwk/documents"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
directories = "5.0.1"
extend = "1.2.0"
open = "5.3.0"
